--- a/style.css
+++ b/style.css
@@ -8,41 +8,42 @@ body {
     background: #f7f0e9;
     transition: .6s;
 
-}
+  }
 
-h1 {
+  h1 {
 
     font-size: 5em;
+    color: #3d3935;
 
-}
+  }
 
-#container {
+  #container {
 
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-}
+  }
 
-.switch {
+  .switch {
 
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
 
-}
+  }
 
-.switch input {
+  .switch input {
 
-    display: nome;
+    display: none;
 
-}
+  }
 
-.slider {
+  .slider {
 
     position: absolute;
     cursor: pointer;
@@ -54,30 +55,41 @@ h1 {
     border-radius: 34px;
     transition: .4s;
 
-}
+  }
 
-.slider::before {
+  .slider:before {
 
     content: "";
     position: absolute;
-    width: 26px;
     height: 26px;
+    width: 26px;
     left: 4px;
     bottom: 4px;
     background: #fff;
     border-radius: 50%;
     transition: .4s;
 
-}
+  }
 
-.input:checked + .slider {
+  input:checked + .slider {
 
     background: #b892ff;
 
-}
+  }
 
-.input:checked  + .slider::before {
+  input:checked + .slider:before {
 
-    transform: translateX(26px)
+    transform: translateX(26px);
+  }
 
-}
+  .dark-mode {
+
+    background: #0b0a14;
+
+  }
+
+  .dark-mode h1 {
+
+    color: #f7f0e9;
+
+  }
